--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -12,6 +12,6 @@ jobs:
       - name: Update gist
         uses: maxam2017/productive-box@master
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          GIST_ID: ${{ secrets.GIST_ID }}
+          GH_TOKEN: ${{ secrets.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 }}
+          GIST_ID: ${{ secrets.https://gist.github.com/commashy/ }}
           TIMEZONE: Asia/Seoul
